2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: HTML5 status constants are OR-ed with "allowed" status.
	Don't raise "not defined" errors; they are now raised according
	to status flags.  Status flags of li/@value, ol/@start, and menu
	are now non-deprecated, to avoid deprecated error message.
	area/@hreftype typo fixed.  |isindex| SHOULD NOT be used
	according to HTML4.

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Make |figure| caption optional (HTML5 revision 1240).
	Add |reversed| to |ol| (HTML5 revision 1248).

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Most of Web Forms 1.0 attributes are implemented.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |big|, |tt|, |s|, |strike|, and |u| are implemented.
	Raise not-part-of-HTML5 error for |acronym|.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: HTML5 attribute status added.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Standardized status for attributes are added (HTML5
	info are not added yet).  Make element or attribute not defined
	by HTML5 spec as a conformance error (though it is not clearly
	defined by HTML5 spec as non-conforming).  Note that more work
	is needed for non-standard attribute thing, since the current
	implementation prevents non-standard attribute from being 
	syntactically checked (otherwise it is treated as if a
	standard attribute).

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Standardized status attributes are added.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Invalid |meta| in |noscript| should be erred
	as usual.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Updated for |del|-and-significant problem.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (datagrid): Condition was incorrect.

2008-02-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (%HTMLProseContentChecker, details, figure): Don't
	change state when a transparent element is encountered.
	(details check): Reimplemented.
