@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Tue Feb 26 17:16:31 2008
-# Current time GMT:   Tue Feb 26 08:16:31 2008
+# Current time local: Tue Feb 26 17:38:00 2008
+# Current time GMT:   Tue Feb 26 08:38:00 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
