@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Tue Feb 26 17:16:15 2008
-# Current time GMT:   Tue Feb 26 08:16:15 2008
+# Current time local: Tue Feb 26 17:37:20 2008
+# Current time GMT:   Tue Feb 26 08:37:20 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
